# rsp_eval

./: .gitignore  LICENSE  README.md  label-studio-config.xml  pyproject.toml  reservoir.awk
rsp/: __init__.py  annotations.py  datasets.py  detectors.py  extractors.py  glc.py  languages.py  metrics.py  outputs.py  pipeline.py  plots.py  preannotation.py  publication_visuals.py  routing.py  url_extractor.py
rsp/cli/: __init__.py  balance_glc.py  common.py  compare_annotations.py  cutoff_sweep.py  oop_visualise.py  owi_preprocessing.py  pipeline.py  prepare_datasets.py  publication_visuals.py  resiliparse_outputs.py  score_gap.py  text_length_sweep.py
